setup/cluster/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
spec:
  rules:
    - host: docker-registry.internal.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
  tls:
    - hosts:
        - docker-registry.internal.${DOMAIN}
      secretName: wildcard-internal-wild-cloud-tls
